// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders a dateTime input 1`] = `
<styled.div>
  <label />
  <input
    type="datetime-local"
  />
</styled.div>
`;

exports[`Input renders a submit input 1`] = `
<styled.div>
  <label />
  <input
    type="submit"
  />
</styled.div>
`;

exports[`Input renders a text input 1`] = `
<styled.div>
  <label />
  <input
    type="text"
  />
</styled.div>
`;
